--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.10/css/all.css'>
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>Vue.js ToDo</title>
+  <script src='https://unpkg.com/vuex'></script>
 </head>
 
 <body>
